# rtb-perception

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
rtb_perception/: __init__.py  diff_bbox.py  io.py  matching.py  run_tracker.py  tracker.py  visualize.py
tests/: test_diff_bbox.py  test_io.py  test_kind_side.py  test_matching.py  test_run_tracker.py  test_tracker.py
