[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtb_perception"
version = "0.1.0"
description = "Diff-based spawn detection stabilized by tracking"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "rtb_perception contributors"}]
dependencies = [
  "numpy",
  "opencv-python",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["rtb_perception*"]
